fixed Mesaage input issue and login page

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -771,3 +771,10 @@
     }
   }
   }
+
+  pre.shiki {
+    background-color: #fff;
+  }
+  pre.shiki {
+    background: transparent !important;
+  }
